--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dash==1.1.1
 dash-core-components==1.1.1
 dash-html-components==1.0.0
+dash_bootstrap_components
 dash-renderer==1.0.0
 dash-table==4.1.0
 dask==2.1.0
