--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ ipython-genutils==0.2.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 numpy==1.16.4
+matplotlib
 pandas==0.24.2
 plotly==4.1.0
 Werkzeug==0.15.4
