--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.~lock*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -36,3 +37,4 @@ var/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+
