--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
-dash==1.1.1
-dash-core-components==1.1.1
-dash-html-components==1.0.0
+dash
+dash-core-components
+dash-html-components
 dash_bootstrap_components
-dash-renderer==1.0.0
-dash-table==4.1.0
-dask==2.1.0
-decorator==4.4.0
-Flask==1.1.1
-Flask-Compress==1.4.0
+dash-renderer
+dash-table
+dask
+decorator
+Flask
+Flask-Compress
 flask_login
 flask_sqlalchemy
-gunicorn==19.9.0
-html5lib==1.0.1
-idna==2.8
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-Jinja2==2.10.1
-numpy==1.16.4
+gunicorn
+html5lib
+idna
+ipython-genutils
+itsdangerous
+numpy
 matplotlib
-pandas==0.24.2
-plotly==4.1.0
-Werkzeug==0.15.4
+pandas
+plotly
+Werkzeug
